--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,22 +5,22 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: Helvetica, sans-serif;
+    font-family: Helvetica, 'trebuchet MS',sans-serif;
+    background-color: white;
     
 }
 
 header {
     padding: 5px;
     border-bottom: 10px double black;
-    float: right;
-    height: 800px;
-    width: 50%;
+    /* float: right; */
+    height: 200px;
+    /* width: 50%; */
     margin-bottom: 25px;
 }
 
 nav {
-    background-color: white;
-    height: 800px;
+    height: 200px;
     color:black;
     margin: 0 0 0 2px;
     font-family: Helvetica, sans-serif;
@@ -31,22 +31,32 @@ h1 {
     font-family: Zapfino;
     display: block;
     text-align: center;
-    margin: 0.5% 2%;
+    margin: 0.25% 2%;
     position: relative;
-    top: 20%;
+    top: 5%;
 }
 
 .header {
-    font-size: 50px;
+    font-size: 30px;
 }
 
 ul {
-    list-style-type: none;
-    display: block;
+    /* list-style-type: none; */
+    /* display: block; */
     position: relative;
-    top: 25%;
+    top: 8%;
     text-align: center;
-    line-height: 2;
+    /* line-height: 2; */
+    max-width: 450px;
+    margin: 0 auto;
+    padding-left: 0px;
+    
+}
+
+li {
+    list-style-type: none;
+    display: inline;
+    padding: 15px;
 }
 
 a {
@@ -58,17 +68,95 @@ a:hover {
     text-decoration: none;
     color: black;
     font-weight: bolder;
-    font-size: 120%;
 }
 
 .hero {
-    float: left;
-    height: 800px;
-    width: 50%;
-    margin-bottom: 25px;
+    /* float: left; */
+    height: 600px;
+    width: 100%;
+    margin: 5px auto;
     background-image: url(../images/IMG_9846.jpeg);
     background-size: cover;
     background-position: center;
-    
 }
 
+main {
+    padding: 25px 25px;
+}
+
+h2 {
+    margin-bottom: 10px;
+    text-decoration: overline;
+}
+
+p {
+    font-family: 'Trebuchet MS';
+}
+
+@media screen and (min-width: 992px) {
+    header {
+        padding: 5px;
+        border-bottom: 10px double black;
+        float: right;
+        height: 800px;
+        width: 50%;
+        margin-bottom: 25px;
+    }
+    
+    nav {
+        background-color: white;
+        height: 800px;
+        color:black;
+        margin: 0 0 0 2px;
+        font-family: Helvetica, sans-serif;
+        
+    }
+    
+    h1 {
+        font-family: Zapfino;
+        display: block;
+        text-align: center;
+        margin: 0.25% 2%;
+        position: relative;
+        top: 20%;
+    }
+    
+    .header {
+        font-size: 30px;
+    }
+    
+    ul {
+        list-style-type: none;
+        display: block;
+        position: relative;
+        top: 25%;
+        text-align: center;
+        line-height: 2;
+    }
+    
+    a {
+        text-decoration: none;
+        color: black;
+    }
+    
+    a:hover {
+        text-decoration: none;
+        color: black;
+        font-weight: bolder;
+        font-size: 120%;
+    }
+    
+    .hero {
+        float: left;
+        height: 800px;
+        width: 50%;
+        margin-bottom: 25px;
+        background-image: url(../images/IMG_9846.jpeg);
+        background-size: cover;
+        background-position: center;
+    }
+    
+    main {
+        padding: 200px;
+    }
+}
