updated CSS file to make the page responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,11 +103,16 @@ p {
     text-align: left;
 }
 
-div {
+#My-projects {
+    display: block;
+}
+
+.main-project {
     height: 100%;
     width: 100%;
     border: 2px solid black;
     margin-bottom: 10px;
+    display: inline-block;
 }
 
 #webdev {
@@ -115,22 +120,83 @@ div {
     width: 100%;
     object-fit: cover;
     object-position: 0 0;
+    filter: grayscale(100%);
 }
 
-.ERP {
+#webdev:hover {
+    height: 600px;
+    width: 100%;
+    object-fit: cover;
+    object-position: 0 0;
+    filter: grayscale(00%);
+}
+
+.small-projects {
+    /* height: 150px; */
+    width: 100%;
+    display: flex;
+    /* flex-wrap: wrap; */
+}
+
+.erp {
+    display: inline-block;
+    position: relative;
+    bottom: 0px;
+    right: 0%;
     height: 100%;
-    width: 50%;
+    width: 49.5%;
     border: 2px solid black;
     margin-bottom: 20px;
     margin-right: 5px;
 }
 
-#ERP {
+#erpimg {
     height: 300px;
     width: 100%;
     object-fit: cover;
     object-position: 80% 0;
+    filter: grayscale(100%);
 }
+
+#erpimg:hover {
+    height: 300px;
+    width: 100%;
+    object-fit: cover;
+    object-position: 80% 0;
+    filter: grayscale(0%);
+}
+
+.seo {
+    display: inline-block;
+    position: relative;
+    bottom: 0px;
+    right: 0%;
+    height: 100%;
+    width: 49.5%;
+    border: 2px solid black;
+    margin-bottom: 20px;
+    margin-left: 8px;
+}
+
+#seoimg {
+    height: 300px;
+    width: 100%;
+    object-fit: cover;
+    object-position: 0 0;
+    filter: grayscale(100%);
+}
+
+#seoimg:hover {
+    height: 300px;
+    width: 100%;
+    object-fit: cover;
+    object-position: 0 0;
+    filter: grayscale(00%);
+}
+
+/* #contact-me {
+    display: relative;
+} */
 
 @media screen and (min-width: 992px) {
     header {
@@ -195,7 +261,7 @@ div {
         background-position: center;
     }
     
-    main {
+    /* main {
         padding: 200px;
-    }
+    } */
 }
