--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,9 +98,22 @@ p {
     text-align: justify;
 }
 
+.skills {
+    text-align: center;
+}
+
 .contact {
+    display: none;
     list-style-type: none;
     text-align: left;
+}
+
+.contact-me-mobile {
+    padding: 0px 150px;
+    /* max-width: 50%; */
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
 }
 
 #my-projects {
@@ -135,7 +148,8 @@ p {
     /* height: 150px; */
     width: 100%;
     display: flex;
-    /* flex-wrap: wrap; */
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .erp {
@@ -144,10 +158,10 @@ p {
     bottom: 0px;
     right: 0%;
     height: 100%;
-    width: 49.5%;
+    /* width: 49.5%; */
     border: 2px solid black;
-    margin-bottom: 20px;
-    margin-right: 5px;
+    margin-bottom: 10px;
+    /* margin-right: 5px; */
 }
 
 #erpimg {
@@ -172,10 +186,10 @@ p {
     bottom: 0px;
     right: 0%;
     height: 100%;
-    width: 49.5%;
+    width: 100%;
     border: 2px solid black;
     margin-bottom: 20px;
-    margin-left: 8px;
+    /* margin-left: 8px; */
 }
 
 #seoimg {
@@ -194,26 +208,32 @@ p {
     filter: grayscale(00%);
 }
 
-#contact-me {
-    display: relative;
+footer {
+    border: 20px solid black;
+    background-color: black;
+    text-align: center;
+    color: white;
+    font-size: 15px;
 }
 
 @media screen and (min-width: 992px) {
     header {
-        padding: 5px;
+        /* padding: 5px; */
         border-bottom: 10px double black;
         float: right;
-        height: 800px;
-        width: 50%;
+        height: 820px;
+        width: 100%;
         margin-bottom: 25px;
     }
     
     nav {
+        float: right;
         background-color: white;
+        width: 50%;
         height: 800px;
         color:black;
-        margin: 0 0 0 2px;
         font-family: Helvetica, sans-serif;
+        margin: 0px;
         
     }
     
@@ -255,14 +275,14 @@ p {
         float: left;
         height: 800px;
         width: 50%;
-        margin-bottom: 25px;
+        margin: 0px 0px 25px 0px;
         background-image: url(../images/IMG_9846.jpeg);
         background-size: cover;
         background-position: center;
     }
     
     main {
-        padding: 200px;
+        padding: 50px 200px;
     }
 
     h2 {
@@ -279,10 +299,26 @@ p {
         text-align: justify;
     }
     
+    .skills {
+        text-align: center;
+    }
+
     .contact {
         list-style-type: none;
         text-align: left;
-        display: block;
+        display: flex;
+        justify-content: space-between;
+        padding: 0px 50px;
+        vertical-align: middle;
+    }
+
+    .contact-me-mobile {
+        padding-right: 300px;
+        /* max-width: 50%; */
+        display: flex;
+        justify-content: space-between;
+        text-align: center;
+        display: none;
     }
     
     #my-projects {
@@ -317,7 +353,8 @@ p {
         /* height: 150px; */
         width: 100%;
         display: flex;
-        /* flex-wrap: wrap; */
+        /* flex-direction: row;*/
+        flex-wrap: wrap;
     }
     
     .erp {
@@ -328,7 +365,7 @@ p {
         height: 100%;
         width: 49.5%;
         border: 2px solid black;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         margin-right: 5px;
     }
     
@@ -357,7 +394,7 @@ p {
         width: 49.5%;
         border: 2px solid black;
         margin-bottom: 20px;
-        margin-left: 8px;
+        margin-left: 5px;
     }
     
     #seoimg {
@@ -375,8 +412,12 @@ p {
         object-position: 0 0;
         filter: grayscale(00%);
     }
-    
-    #contact-me {
-        display: relative;
+
+    footer {
+        border: 20px solid black;
+        background-color: black;
+        text-align: center;
+        color: white;
+        font-size: 15px;
     }
 }
