--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ header {
     padding: 1px;
     border-bottom: 5px double black;
     /* float: right; */
-    height: 170px;
+    /* height: 170px; */
     /* width: 50%; */
     margin-bottom: 5px;
 }
@@ -221,7 +221,7 @@ footer {
         /* padding: 5px; */
         border-bottom: 10px double black;
         float: right;
-        height: 820px;
+        height: 815px;
         width: 100%;
         margin-bottom: 25px;
     }
