--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,15 +7,11 @@
     margin: 0;
     font-family: Helvetica, 'trebuchet MS',sans-serif;
     background-color: white;
-    
 }
 
 header {
     padding: 1px;
     border-bottom: 5px double black;
-    /* float: right; */
-    /* height: 170px; */
-    /* width: 50%; */
     margin-bottom: 5px;
 }
 
@@ -41,12 +37,9 @@ h1 {
 }
 
 ul {
-    /* list-style-type: none; */
-    /* display: block; */
     position: relative;
     top: 8%;
     text-align: center;
-    /* line-height: 2; */
     margin: 0 auto;
     padding-left: 0px;
     
@@ -71,7 +64,6 @@ a:hover {
 }
 
 .hero {
-    /* float: left; */
     height: 600px;
     width: 100%;
     margin: 5px auto;
@@ -81,7 +73,7 @@ a:hover {
 }
 
 main {
-    padding: 25px 25px;
+    padding: 25px 25px 75px 25px;
 }
 
 h2 {
@@ -110,7 +102,6 @@ p {
 
 .contact-me-mobile {
     padding: 0px 150px;
-    /* max-width: 50%; */
     display: flex;
     justify-content: space-between;
     text-align: center;
@@ -145,7 +136,6 @@ p {
 }
 
 .small-projects {
-    /* height: 150px; */
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -158,10 +148,8 @@ p {
     bottom: 0px;
     right: 0%;
     height: 100%;
-    /* width: 49.5%; */
     border: 2px solid black;
     margin-bottom: 10px;
-    /* margin-right: 5px; */
 }
 
 #erpimg {
@@ -189,7 +177,6 @@ p {
     width: 100%;
     border: 2px solid black;
     margin-bottom: 20px;
-    /* margin-left: 8px; */
 }
 
 #seoimg {
@@ -217,13 +204,14 @@ footer {
 }
 
 @media screen and (min-width: 992px) {
+    
     header {
-        /* padding: 5px; */
         border-bottom: 10px double black;
         float: right;
         height: 815px;
         width: 100%;
         margin-bottom: 25px;
+        position: relative;
     }
     
     nav {
@@ -234,7 +222,6 @@ footer {
         color:black;
         font-family: Helvetica, sans-serif;
         margin: 0px;
-        
     }
     
     h1 {
@@ -282,7 +269,7 @@ footer {
     }
     
     main {
-        padding: 50px 200px;
+        padding: 840px 200px 100px 200px;
     }
 
     h2 {
@@ -291,7 +278,8 @@ footer {
     }
     
     h3 {
-        margin: 5px;
+        
+        margin-bottom: 5px;
     }
     
     p {
@@ -314,7 +302,6 @@ footer {
 
     .contact-me-mobile {
         padding-right: 300px;
-        /* max-width: 50%; */
         display: flex;
         justify-content: space-between;
         text-align: center;
@@ -350,10 +337,8 @@ footer {
     }
     
     .small-projects {
-        /* height: 150px; */
         width: 100%;
         display: flex;
-        /* flex-direction: row;*/
         flex-wrap: wrap;
     }
     
