updated font size for contact me icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,6 +298,7 @@ footer {
         justify-content: space-between;
         padding: 0px 50px;
         vertical-align: middle;
+        align-items: flex-start;
     }
 
     .contact-me-mobile {
