--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,410 +1,407 @@
 @font-face {
-    font-family: Zapfino; src: url(Zapfino.ttf);
+  font-family: Zapfino;
+  src: url(Zapfino.ttf);
 }
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    font-family: Helvetica, 'trebuchet MS',sans-serif;
-    background-color: white;
+  box-sizing: border-box;
+  margin: 0;
+  font-family: Helvetica, "trebuchet MS", sans-serif;
+  background-color: white;
 }
 
 header {
-    padding: 1px;
-    border-bottom: 5px double black;
-    margin-bottom: 5px;
+  padding: 1px;
+  border-bottom: 5px double black;
+  margin-bottom: 5px;
 }
 
 nav {
-    height: 150px;
-    color:black;
-    margin: 0 0 0 2px;
-    font-family: Helvetica, sans-serif;
-    
+  height: 150px;
+  color: black;
+  margin: 0 0 0 2px;
+  font-family: Helvetica, sans-serif;
 }
 
 h1 {
+  font-family: Zapfino;
+  display: block;
+  text-align: center;
+  margin: 0.25% 2%;
+  position: relative;
+  top: 5%;
+}
+
+.header {
+  font-size: 30px;
+}
+
+ul {
+  position: relative;
+  top: 8%;
+  text-align: center;
+  margin: 0 auto;
+  padding-left: 0px;
+}
+
+.menu {
+  list-style-type: none;
+  display: inline;
+  padding: 15px;
+  max-width: 450px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  text-decoration: none;
+  color: black;
+  font-weight: bolder;
+}
+
+.hero {
+  height: 600px;
+  width: 100%;
+  margin: 5px auto;
+  background-image: url(../images/IMG_9846.jpeg);
+  background-size: cover;
+  background-position: center;
+}
+
+main {
+  padding: 25px 25px 75px 25px;
+}
+
+h2 {
+  margin-bottom: 20px;
+  text-decoration: overline;
+}
+
+h3 {
+  margin: 5px;
+}
+
+p {
+  margin-bottom: 30px;
+  text-align: justify;
+}
+
+.skills {
+  text-align: center;
+}
+
+.contact {
+  display: none;
+  list-style-type: none;
+  text-align: left;
+}
+
+.contact-me-mobile {
+  padding: 0px 150px;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+
+#my-projects {
+  display: block;
+}
+
+.main-project {
+  height: 100%;
+  width: 100%;
+  border: 2px solid black;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+
+#webdev {
+  height: 600px;
+  width: 100%;
+  object-fit: cover;
+  object-position: 0 0;
+  filter: grayscale(100%);
+}
+
+#webdev:hover {
+  height: 600px;
+  width: 100%;
+  object-fit: cover;
+  object-position: 0 0;
+  filter: grayscale(00%);
+}
+
+.small-projects {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.erp {
+  display: inline-block;
+  position: relative;
+  bottom: 0px;
+  right: 0%;
+  height: 100%;
+  width: 100%;
+  border: 2px solid black;
+  margin-bottom: 10px;
+}
+
+#erpimg {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+  object-position: 80% 0;
+  filter: grayscale(100%);
+}
+
+#erpimg:hover {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+  object-position: 80% 0;
+  filter: grayscale(0%);
+}
+
+.seo {
+  display: inline-block;
+  position: relative;
+  bottom: 0px;
+  right: 0%;
+  height: 100%;
+  width: 100%;
+  border: 2px solid black;
+  margin-bottom: 20px;
+}
+
+#seoimg {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+  object-position: 0 0;
+  filter: grayscale(100%);
+}
+
+#seoimg:hover {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+  object-position: 0 0;
+  filter: grayscale(00%);
+}
+
+footer {
+  border: 20px solid black;
+  background-color: black;
+  text-align: center;
+  color: white;
+  font-size: 15px;
+}
+
+@media screen and (min-width: 992px) {
+  header {
+    border-bottom: 10px double black;
+    float: right;
+    height: 815px;
+    width: 100%;
+    margin-bottom: 25px;
+    position: relative;
+  }
+
+  nav {
+    float: right;
+    background-color: white;
+    width: 50%;
+    height: 800px;
+    color: black;
+    font-family: Helvetica, sans-serif;
+    margin: 0px;
+  }
+
+  h1 {
     font-family: Zapfino;
     display: block;
     text-align: center;
     margin: 0.25% 2%;
     position: relative;
-    top: 5%;
-}
+    top: 20%;
+  }
 
-.header {
+  .header {
     font-size: 30px;
-}
+  }
 
-ul {
-    position: relative;
-    top: 8%;
-    text-align: center;
-    margin: 0 auto;
-    padding-left: 0px;
-    
-}
-
-.menu {
+  ul {
     list-style-type: none;
-    display: inline;
-    padding: 15px;
-    max-width: 450px;
-}
+    display: block;
+    position: relative;
+    top: 25%;
+    text-align: center;
+    line-height: 2;
+  }
 
-a {
+  a {
     text-decoration: none;
     color: black;
-}
+  }
 
-a:hover {
+  a:hover {
     text-decoration: none;
     color: black;
     font-weight: bolder;
-}
+    font-size: 120%;
+  }
 
-.hero {
-    height: 600px;
-    width: 100%;
-    margin: 5px auto;
+  .hero {
+    float: left;
+    height: 800px;
+    width: 50%;
+    margin: 0px 0px 25px 0px;
     background-image: url(../images/IMG_9846.jpeg);
     background-size: cover;
     background-position: center;
-}
+  }
 
-main {
-    padding: 25px 25px 75px 25px;
-}
+  main {
+    padding: 840px 200px 100px 200px;
+  }
 
-h2 {
+  h2 {
     margin-bottom: 20px;
     text-decoration: overline;
-}
+  }
 
-h3 {
-    margin: 5px;
-}
+  h3 {
+    margin-bottom: 5px;
+  }
 
-p {
+  p {
     margin-bottom: 30px;
     text-align: justify;
-}
+  }
 
-.skills {
+  .skills {
     text-align: center;
-}
+  }
 
-.contact {
-    display: none;
+  .contact {
     list-style-type: none;
     text-align: left;
-}
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 50px;
+    vertical-align: middle;
+    align-items: flex-start;
+  }
 
-.contact-me-mobile {
-    padding: 0px 150px;
+  .contact-me-mobile {
+    padding-right: 300px;
     display: flex;
     justify-content: space-between;
     text-align: center;
-}
+    display: none;
+  }
 
-#my-projects {
+  #my-projects {
     display: block;
-}
+  }
 
-.main-project {
+  .main-project {
     height: 100%;
     width: 100%;
     border: 2px solid black;
     margin-bottom: 10px;
     display: inline-block;
-}
+  }
 
-#webdev {
+  #webdev {
     height: 600px;
     width: 100%;
     object-fit: cover;
     object-position: 0 0;
     filter: grayscale(100%);
-}
+  }
 
-#webdev:hover {
+  #webdev:hover {
     height: 600px;
     width: 100%;
     object-fit: cover;
     object-position: 0 0;
     filter: grayscale(00%);
-}
+  }
 
-.small-projects {
+  .small-projects {
     width: 100%;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
+    flex-wrap: nowrap;
+  }
 
-.erp {
+  .erp {
     display: inline-block;
     position: relative;
     bottom: 0px;
     right: 0%;
     height: 100%;
-    width: 100%;
+    width: 49.5%;
     border: 2px solid black;
     margin-bottom: 10px;
-}
+    margin-right: 5px;
+  }
 
-#erpimg {
+  #erpimg {
     height: 300px;
     width: 100%;
     object-fit: cover;
     object-position: 80% 0;
     filter: grayscale(100%);
-}
+  }
 
-#erpimg:hover {
+  #erpimg:hover {
     height: 300px;
     width: 100%;
     object-fit: cover;
-    object-position: 80% 0;
+    object-position: 0 0;
     filter: grayscale(0%);
-}
+  }
 
-.seo {
+  .seo {
     display: inline-block;
     position: relative;
     bottom: 0px;
     right: 0%;
     height: 100%;
-    width: 100%;
+    width: 49.5%;
     border: 2px solid black;
     margin-bottom: 20px;
-}
+    margin-left: 5px;
+  }
 
-#seoimg {
+  #seoimg {
     height: 300px;
     width: 100%;
     object-fit: cover;
     object-position: 0 0;
     filter: grayscale(100%);
-}
+  }
 
-#seoimg:hover {
+  #seoimg:hover {
     height: 300px;
     width: 100%;
     object-fit: cover;
     object-position: 0 0;
     filter: grayscale(00%);
-}
+  }
 
-footer {
+  footer {
     border: 20px solid black;
     background-color: black;
     text-align: center;
     color: white;
     font-size: 15px;
-}
-
-@media screen and (min-width: 992px) {
-    
-    header {
-        border-bottom: 10px double black;
-        float: right;
-        height: 815px;
-        width: 100%;
-        margin-bottom: 25px;
-        position: relative;
-    }
-    
-    nav {
-        float: right;
-        background-color: white;
-        width: 50%;
-        height: 800px;
-        color:black;
-        font-family: Helvetica, sans-serif;
-        margin: 0px;
-    }
-    
-    h1 {
-        font-family: Zapfino;
-        display: block;
-        text-align: center;
-        margin: 0.25% 2%;
-        position: relative;
-        top: 20%;
-    }
-    
-    .header {
-        font-size: 30px;
-    }
-    
-    ul {
-        list-style-type: none;
-        display: block;
-        position: relative;
-        top: 25%;
-        text-align: center;
-        line-height: 2;
-    }
-    
-    a {
-        text-decoration: none;
-        color: black;
-    }
-    
-    a:hover {
-        text-decoration: none;
-        color: black;
-        font-weight: bolder;
-        font-size: 120%;
-    }
-    
-    .hero {
-        float: left;
-        height: 800px;
-        width: 50%;
-        margin: 0px 0px 25px 0px;
-        background-image: url(../images/IMG_9846.jpeg);
-        background-size: cover;
-        background-position: center;
-    }
-    
-    main {
-        padding: 840px 200px 100px 200px;
-    }
-
-    h2 {
-        margin-bottom: 20px;
-        text-decoration: overline;
-    }
-    
-    h3 {
-        
-        margin-bottom: 5px;
-    }
-    
-    p {
-        margin-bottom: 30px;
-        text-align: justify;
-    }
-    
-    .skills {
-        text-align: center;
-    }
-
-    .contact {
-        list-style-type: none;
-        text-align: left;
-        display: flex;
-        justify-content: space-between;
-        padding: 0px 50px;
-        vertical-align: middle;
-        align-items: flex-start;
-    }
-
-    .contact-me-mobile {
-        padding-right: 300px;
-        display: flex;
-        justify-content: space-between;
-        text-align: center;
-        display: none;
-    }
-    
-    #my-projects {
-        display: block;
-    }
-    
-    .main-project {
-        height: 100%;
-        width: 100%;
-        border: 2px solid black;
-        margin-bottom: 10px;
-        display: inline-block;
-    }
-    
-    #webdev {
-        height: 600px;
-        width: 100%;
-        object-fit: cover;
-        object-position: 0 0;
-        filter: grayscale(100%);
-    }
-    
-    #webdev:hover {
-        height: 600px;
-        width: 100%;
-        object-fit: cover;
-        object-position: 0 0;
-        filter: grayscale(00%);
-    }
-    
-    .small-projects {
-        width: 100%;
-        display: flex;
-        flex-wrap: nowrap;
-    }
-    
-    .erp {
-        display: inline-block;
-        position: relative;
-        bottom: 0px;
-        right: 0%;
-        height: 100%;
-        width: 49.5%;
-        border: 2px solid black;
-        margin-bottom: 10px;
-        margin-right: 5px;
-    }
-    
-    #erpimg {
-        height: 300px;
-        width: 100%;
-        object-fit: cover;
-        object-position: 80% 0;
-        filter: grayscale(100%);
-    }
-    
-    #erpimg:hover {
-        height: 300px;
-        width: 100%;
-        object-fit: cover;
-        object-position: 80% 0;
-        filter: grayscale(0%);
-    }
-    
-    .seo {
-        display: inline-block;
-        position: relative;
-        bottom: 0px;
-        right: 0%;
-        height: 100%;
-        width: 49.5%;
-        border: 2px solid black;
-        margin-bottom: 20px;
-        margin-left: 5px;
-    }
-    
-    #seoimg {
-        height: 300px;
-        width: 100%;
-        object-fit: cover;
-        object-position: 0 0;
-        filter: grayscale(100%);
-    }
-    
-    #seoimg:hover {
-        height: 300px;
-        width: 100%;
-        object-fit: cover;
-        object-position: 0 0;
-        filter: grayscale(00%);
-    }
-
-    footer {
-        border: 20px solid black;
-        background-color: black;
-        text-align: center;
-        color: white;
-        font-size: 15px;
-    }
+  }
 }
